--- a/requirements.txt
+++ b/requirements.txt
@@ -1,117 +1,5 @@
-alembic==1.8.1
-asttokens==2.0.7
-attrs==22.1.0
-azure-ai-formrecognizer==3.2.0b2
-azure-common==1.1.28
-azure-core==1.22.1
-backcall==0.2.0
-backoff==1.11.1
-certifi==2022.6.15
-charset-normalizer==2.1.0
-click==8.1.3
-cloudpickle==2.1.0
-colorama==0.4.5
-databricks-cli==0.17.0
-debugpy==1.6.2
-decorator==5.1.1
-dill==0.3.5.1
-docker==5.0.3
-docopt==0.6.2
-elastic-apm==6.11.0
-elasticsearch==7.10.1
-entrypoints==0.4
-executing==0.9.1
-farm-haystack @ git+https://github.com/deepset-ai/haystack.git@b685409c78663751ff5256b053f722cf1e08240b
-filelock==3.7.1
-Flask==2.2.2
-gitdb==4.0.9
-GitPython==3.1.27
-greenlet==1.1.2
-huggingface-hub==0.7.0
-idna==3.3
-importlib-metadata==4.12.0
-inflect==6.0.0
-ipykernel==6.15.1
-ipython==8.4.0
-isodate==0.6.1
-itsdangerous==2.1.2
-jarowinkler==1.2.0
-jedi==0.18.1
-Jinja2==3.1.2
-joblib==1.1.0
-jsonschema==4.9.1
-jupyter-client==7.3.4
-jupyter-core==4.11.1
-langdetect==1.0.9
-lxml==4.9.1
-Mako==1.2.1
-MarkupSafe==2.1.1
-matplotlib-inline==0.1.3
-mlflow==1.27.0
-mmh3==3.0.0
-monotonic==1.6
-more-itertools==8.14.0
-msrest==0.6.21
-nest-asyncio==1.5.5
-networkx==2.8.5
-nltk==3.7
-num2words==0.5.11
+django_haystack==3.2.1
 numpy==1.23.1
-oauthlib==3.2.0
-packaging==21.3
 pandas==1.4.3
-parso==0.8.3
-pickleshare==0.7.5
-Pillow==9.2.0
-posthog==2.0.1
-prometheus-client==0.14.1
-prometheus-flask-exporter==0.20.3
-prompt-toolkit==3.0.30
-protobuf==4.21.5
-psutil==5.9.1
-pure-eval==0.2.2
-pydantic==1.9.1
-Pygments==2.12.0
-PyJWT==2.4.0
-pyparsing==3.0.9
-pyrsistent==0.18.1
-python-dateutil==2.8.2
-python-docx==0.8.11
-pytz==2022.1
-pywin32==227
-PyYAML==6.0
-pyzmq==23.2.0
-quantulum3==0.7.10
-querystring-parser==1.2.4
-rapidfuzz==2.4.3
-regex==2022.7.25
-requests==2.28.1
-requests-oauthlib==1.3.1
-scikit-learn==1.1.2
-scipy==1.9.0
-sentence-transformers==2.2.2
-sentencepiece==0.1.97
-seqeval==1.2.2
-six==1.16.0
-smmap==5.0.0
-SQLAlchemy==1.4.40
-sqlparse==0.4.2
-stack-data==0.3.0
-tabulate==0.8.10
-threadpoolctl==3.1.0
-tika==1.24
-tokenizers==0.12.1
-torch==1.12.1+cu113
-torchaudio==0.12.1+cu113
-torchvision==0.13.1+cu113
-tornado==6.2
-tqdm==4.64.0
-traitlets==5.3.0
 transformers==4.20.1
-typing_extensions==4.3.0
-urllib3==1.26.11
-waitress==2.1.2
-wcwidth==0.2.5
-websocket-client==1.3.3
-Werkzeug==2.2.2
-zipp==3.8.1
+ipykernel==6.15.1
